# Sagittarius-A-OpenGL-simulation

./: CMakeLists.txt  README.md
src/: BlackHole.cpp  BlackHole.h  Ray.cpp  Ray.h  config.h  main.cpp
src/controller/: app.cpp  app.h
src/shaders/: fragment.txt  vertex.txt
src/view/: shader.cpp
